# Rouge-Like-Game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.txt
.github/: copilot-instructions.md
include/: combat.h  enemy.h  map.h  player.h  saveload.h
src/: combat.cpp  enemy.cpp  main.cpp  map.cpp  player.cpp  renderer.cpp  saveload.cpp
